--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.1.2"
+  },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon -r esm server.js"
   },
   "keywords": [],
   "author": "",
